<resources>
    <string name="app_name">Slock Android</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="not_a_user_yet">Not a user yet?</string>
    <!--Strings related to register-->
    <string name="reg_passwd_empty">Empty</string>
    <string name="reg_firstName">first name</string>
    <string name="reg_lastName">last name</string>
    <string name="reg_email">email</string>
    <string name="reg_conf_email">confirm email</string>
    <string name="reg_screen1">Step 1</string>
    <string name="reg_screen2">Step 2</string>
    <string name="reg_screen1_next">Next</string>
    <string name="reg_screen1_logo">Register</string>
    <string name="reg_screen2_passwd_empty">Empty</string>
    <string name="reg_screen2_passwd_weak">Weak</string>
    <string name="reg_screen2_passwd_avg">Average</string>
    <string name="reg_screen2_passwd_strong">Strong</string>
    <string name="reg_screen2_passwd_marv">Marvelous</string>
    <string name="reg_screen2_passwd_too_long">Too long!</string>
    <string name="reg_screen2_register">Register!</string>
    <string name="reg_screen2_passwd">Password</string>
    <string name="reg_screen2_conf_passwd">Confirm Password</string>
    <string name="title_activity_owned_locks" translatable="false">OwnedLocksActivity</string>
    <!-- Strings related to HomeView -->
    <string name="title_activity_HomeView">Welcome!</string>
    <string name="title_activity_HomeView_additional" translatable="false"></string>
    <string name="btn_own_locks">Owned Locks</string>
    <string name="btn_accessible_locks">Accessible\n Locks</string>
    <string name="btn_temp">Coming\n Soon!</string>
    <!--Strings for settings -->
    <string name="title_activity_SettingsView">Settings</string>
    <string name="set_change_passwd">Change Password</string>
    <string name="set_old_passwd">Old Password</string>
    <string name="set_new_passwd">New Password</string>
    <string name="set_conf_passwd">Confirm Password</string>
    <string name="set_logout">Log Out</string>
    <!--Strings for renting -->
    <string name="rent_header">Rent A lock</string>
    <string name="rent_button">Confirm</string>
    <string name="rent_strt_time_info">Access starts:</string>
    <string name="rent_end_time_info">Access ends:</string>
    <string name="rent_date">Date: YYYY-MM-dd</string>
    <string name="rent_time">Time: HH:mm</string>
    <string name="rent_renter">Rent to user:</string>
    <!--Strings for AccessibleLocksView-->
    <string name="lck_name">Lock name here</string>
    <string name="btn_lck_open">Open</string>
    <string name="btn_lck_close">Close</string>
    <string name="no_locks_found">no locks found</string>
    <!--String for RegisterLock-->
    <string name="btn_register_lock">Register Lock</string>
    <string name="in_lock_name">Lock name</string>
    <string name="tx_searching_locks">Searchig for Slocks</string>
    <string name="hint_lock_description">Description</string>
    <string name="hint_lock_productkey">productkey: xxxxx-xxxxx-xxxxx</string>
    <!--String for ownedlocks recyclerview-->
    <string name="tx_owned_locks_name_here">lock name here</string>
    <string name="btn_owned_locks_rent">Rent</string>
    <!-- Strings for Controllers Toasts-->
    <string name="lockauth_something_went_wrong">Something went wrong</string>
    <string name="lockauth_error">Error</string>
    <string name="lockauth_unexpected">Unexpected result</string>
    <string name="acc_lock_synced_toast">Lock synced up, try again</string>
    <string name="acc_lock_open_toast">Opening: </string>
    <string name="acc_lock_close_toast">Closing: </string>
    <string name="login_vefify_email_first_toast">verifiy your email first</string>
    <string name="login_invalid">Invalid login</string>


    <string name="registerable_device_not_found">No registerable devices found</string>
    <string name="registerable_device_found">registerable lock found</string>
</resources>
