<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundTint="#FFFFFF"
        tools:context=".Presenters.RegisterActivity.RegisterView">

    <EditText
            android:id="@+id/in_firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:ems="10"
            android:hint="@string/reg_firstName"
            android:inputType="textPersonName"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorBackgroundSecondaryDark"

            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="@+id/reg_progressBar_step1"
            app:layout_constraintStart_toStartOf="@+id/reg_progressBar_step1"
            app:layout_constraintTop_toBottomOf="@+id/reg_progressBar_step1" />

    <EditText
            android:id="@+id/in_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/reg_lastName"
            android:inputType="textPersonName"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorBackgroundSecondaryDark"
            app:layout_constraintEnd_toEndOf="@+id/in_firstName"
            app:layout_constraintStart_toStartOf="@+id/in_firstName"
            app:layout_constraintTop_toBottomOf="@+id/in_firstName" />" />

    <TextView
            android:id="@+id/tx_step1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/reg_screen1"
            android:textAlignment="center"
            android:textColor="@color/colorTextDark"
            android:textSize="60px"
            app:layout_constraintEnd_toEndOf="@id/tx_register_logo"
            app:layout_constraintStart_toStartOf="@id/tx_register_logo"
            app:layout_constraintTop_toTopOf="@id/tx_register_logo" />

    <TextView
            android:id="@+id/tx_register_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/reg_screen1_logo"
            android:textAlignment="center"
            android:textColor="@color/colorTextDark"
            android:textSize="80px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/in_reg_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/reg_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorBackgroundSecondaryDark"
            app:layout_constraintEnd_toEndOf="@+id/in_lastName"
            app:layout_constraintStart_toStartOf="@+id/in_lastName"
            app:layout_constraintTop_toBottomOf="@+id/in_lastName" />

    <EditText
            android:id="@+id/in_reg_conf_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/reg_conf_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorBackgroundSecondaryDark"
            app:layout_constraintEnd_toEndOf="@+id/in_reg_email"
            app:layout_constraintStart_toStartOf="@+id/in_reg_email"
            app:layout_constraintTop_toBottomOf="@+id/in_reg_email" />

    <ProgressBar
            android:id="@+id/reg_progressBar_step1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="276dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:background="#00FDFDFD"
            android:progressTint="#4CAF50"

            android:min = "0"
            android:max = "8"
            app:layout_constraintEnd_toEndOf="@+id/tx_step1"
            app:layout_constraintStart_toStartOf="@+id/tx_step1"
            app:layout_constraintTop_toBottomOf="@+id/tx_step1"/>

    <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_shape_button_primary"
            android:text="@string/reg_screen1_next"
            app:layout_constraintEnd_toEndOf="@+id/in_reg_conf_email"
            app:layout_constraintStart_toStartOf="@+id/in_reg_conf_email"
            app:layout_constraintTop_toBottomOf="@+id/in_reg_conf_email" />

</android.support.constraint.ConstraintLayout>