<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundTint="#FFFFFF"
        tools:context=".Presenters.RegisterActivity.RegisterView">

    <TextView
            android:id="@+id/tx_settings_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/title_activity_SettingsView"
            android:textAlignment="center"
            android:textColor="@color/colorTextDark"
            android:textSize="80px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tx_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/set_change_passwd"
            android:textAlignment="center"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/tx_settings_logo"
            app:layout_constraintStart_toStartOf="@id/tx_settings_logo"
            app:layout_constraintTop_toTopOf="@id/tx_settings_logo" />

    <EditText
            android:id="@+id/in_old_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/set_old_passwd"
            android:inputType="textPassword"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorBackgroundSecondaryDark"
            app:layout_constraintEnd_toEndOf="@id/tx_change_password"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/tx_change_password"
            app:layout_constraintTop_toTopOf="@id/tx_change_password" />

    <EditText
            android:id="@+id/in_new_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/set_new_passwd"
            android:inputType="textPassword"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorBackgroundSecondaryDark"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="@+id/in_old_passwd"
            app:layout_constraintStart_toStartOf="@+id/in_old_passwd"
            app:layout_constraintTop_toBottomOf="@+id/in_old_passwd" />

    <ProgressBar
            android:id="@+id/set_passwdBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="4"
            android:min="0"
            app:layout_constraintEnd_toEndOf="@+id/in_new_passwd"
            app:layout_constraintStart_toStartOf="@+id/in_new_passwd"
            app:layout_constraintTop_toBottomOf="@+id/in_new_passwd" />

    <TextView
            android:id="@+id/tx_set_passwd_strength"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reg_passwd_empty"
            android:textAlignment="center"
            android:textColor="@color/colorBackgroundSecondaryDark"
            app:layout_constraintEnd_toEndOf="@id/set_passwdBar"
            app:layout_constraintStart_toStartOf="@id/set_passwdBar"
            app:layout_constraintTop_toBottomOf="@id/set_passwdBar" />

    <EditText
            android:id="@+id/in_new_conf_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/set_conf_passwd"
            android:inputType="textPassword"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorBackgroundSecondaryDark"
            app:layout_constraintEnd_toEndOf="@id/tx_set_passwd_strength"
            app:layout_constraintStart_toStartOf="@id/tx_set_passwd_strength"
            app:layout_constraintTop_toBottomOf="@id/tx_set_passwd_strength" />

    <Button
            android:id="@+id/btn_set_change_passwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_shape_button_primary"
            android:text="@string/set_change_passwd"
            app:layout_constraintEnd_toEndOf="@+id/in_new_conf_passwd"
            app:layout_constraintStart_toStartOf="@+id/in_new_conf_passwd"
            app:layout_constraintTop_toBottomOf="@+id/in_new_conf_passwd" />

    <Button
            android:id="@+id/btn_settings_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rounded_shape_logout_button_1"
            android:text="@string/set_logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_set_change_passwd"
            app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>