<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundTint="#FFFFFF"
        tools:context=".Presenters.RegisterActivity.RegisterView">

    <EditText
            android:id="@+id/in_reg_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:ems="10"
            android:hint="@string/reg_screen2_passwd"
            android:inputType="textPassword"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorBackgroundSecondaryDark"

            app:layout_constraintHorizontal_bias="0.5"

            app:layout_constraintTop_toBottomOf="@+id/reg_progressBar_step2"
            app:layout_constraintStart_toStartOf="@+id/reg_progressBar_step2"
            app:layout_constraintEnd_toEndOf="@+id/reg_progressBar_step2"/>

    <EditText
            android:id="@+id/in_reg_conf_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/reg_screen2_conf_passwd"
            android:inputType="textPassword"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorBackgroundSecondaryDark"
            app:layout_constraintEnd_toEndOf="@id/tx_passwd_strength"
            app:layout_constraintStart_toStartOf="@id/tx_passwd_strength"
            app:layout_constraintTop_toBottomOf="@id/tx_passwd_strength" />
    <TextView
            android:id="@+id/tx_step2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/reg_screen2"
            android:textAlignment="center"
            android:textColor="@color/colorTextDark"
            android:textSize="60px"
            app:layout_constraintEnd_toEndOf="@id/tx_register_logo"
            app:layout_constraintStart_toStartOf="@id/tx_register_logo"
            app:layout_constraintTop_toTopOf="@id/tx_register_logo" />

    <TextView
            android:id="@+id/tx_register_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/reg_screen1_logo"
            android:textAlignment="center"
            android:textColor="@color/colorTextDark"
            android:textSize="80px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
            android:id="@+id/reg_progressBar_step2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="276dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:background="#00FDFDFD"
            android:progressTint="#4CAF50"
            app:layout_constraintEnd_toEndOf="@+id/tx_step2"
            app:layout_constraintStart_toStartOf="@+id/tx_step2"
            app:layout_constraintTop_toBottomOf="@+id/tx_step2"
            android:min = "0"
            android:max = "8"/>

    <Button
            android:id="@+id/btn_finish_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_shape_button_primary"
            android:text="@string/reg_screen2_register"
            app:layout_constraintEnd_toEndOf="@+id/in_reg_conf_passwd"
            app:layout_constraintStart_toStartOf="@+id/in_reg_conf_passwd"
            app:layout_constraintTop_toBottomOf="@+id/in_reg_conf_passwd" />

    <ProgressBar
            android:id="@+id/passwdBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/in_reg_passwd"
            app:layout_constraintStart_toStartOf="@+id/in_reg_passwd"
            app:layout_constraintTop_toBottomOf="@+id/in_reg_passwd"
            android:min = "0"
            android:max = "4"/>

    <TextView
            android:id="@+id/tx_passwd_strength"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBackgroundSecondaryDark"
            android:textAlignment="center"
            android:text="@string/reg_passwd_empty"
            app:layout_constraintEnd_toEndOf="@id/passwdBar"
            app:layout_constraintStart_toStartOf="@id/passwdBar"
            app:layout_constraintTop_toBottomOf="@id/passwdBar" />

</android.support.constraint.ConstraintLayout>